Working webcam; API works for adding and displaying patients and patientRecords; Created schemas for patients and patientRecords

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,12 @@
 <h1>
   {{title}}
 </h1>
+
+<ack-webcam
+[(ref)]   = "webcam"
+[options] = "options"
+(success) = "onCamSuccess($event)"
+(catch)   = "onCamError($event)"
+></ack-webcam>
+<button (click)="genBase64()"> generate base64 </button>
+<button (click)="genPostData()"> generate post data </button>
